welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:15: error: '=>' expected but integer literal found.
		case =< 2 => droite
                        ^Poucet:16: error: '=>' expected but integer literal found.
		case >= 3 => gauche
                        ^