welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var nb = 0;

while (!sortieTrouvee())
{
	do{
		avance;
		if (estSurBiscuit)
		{
			nb = nb +1; 
		}
	}while (croisement())

	nb match {
		case =< 2 => droite
		case >= 3 => gauche
	}
}
